add delete api for news
